--- a/report/50-conclusion.tex
+++ b/report/50-conclusion.tex
@@ -1,2 +1,13 @@
 \chapter*{Заключение}
 \addcontentsline{toc}{chapter}{Заключение}
+
+В результате выполнения работы цель достигнута: проведен сравнительный анализ алгоритмов классификации и генерации сигналов дистанционно-управляемых устройств.
+
+В ходе выполнения данной работы были решены поставленные задачи:
+\begin{itemize}
+	\item[-] проведен анализ предметной области;
+	\item[-] проведен анализ типов шумов и модуляций;
+	\item[-] сформулированы критерии оценивания алгоритмов классификации и генерации сигналов;
+	\item[-] на основе этих критериев оценена применимость данных алгоритмов;
+	\item[-] определен оптимальный по совокупности критериев алгоритм классификации и генерации сигналов.
+\end{itemize}
