--- a/report/51-biblio.bib
+++ b/report/51-biblio.bib
@@ -31,19 +31,14 @@
 	howpublished="Режим доступа: \url{http://zrv.ivo.unn.ru/pages/vtp/5/5-5-radioelektronnye-pomekhi.htm} (дата обращения: 23.11.2022)"
 }
 
-@misc{signaltointer,
-	title="Отношение сигнал / помеха [Электронный ресурс]",
-	howpublished="Режим доступа: \url{https://wiki5.ru/wiki/Signal-to-interference_ratio} (дата обращения: 23.11.2022)"
-}
-
 @misc{wifidiapazon,
 	title="UAV Communication Systems [Электронный ресурс]",
 	howpublished="Режим доступа: \url{https://www.extendingbroadband.com/aerial-tracking/drone-communication-systems/} (дата обращения: 23.11.2022)"
 }
 
 @misc{autogaincontrol,
-	title="Автоматическая регулировка усиления [Электронный ресурс]",
-	howpublished="Режим доступа: \url{https://en.wikipedia.org/wiki/Automatic_gain_control} (дата обращения: 24.11.2022)"
+	title="Automatic Gain Control (AGC) in Receivers [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://www.qsl.net/va3iul/Files/Automatic_Gain_Control.pdf} (дата обращения: 24.11.2022)"
 }
 
 @misc{gpsspoofing,
@@ -128,4 +123,29 @@
 @misc{giperparams,
 	title="Настройка гиперпараметров для модели [Электронный ресурс]",
 	howpublished="Режим доступа: \url{https://learn.microsoft.com/ru-ru/azure/machine-learning/how-to-tune-hyperparameters} (дата обращения: 27.11.2022)"
+}
+
+@misc{lstmis,
+	title="LSTM — нейронная сеть с долгой краткосрочной памятью [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://neurohive.io/ru/osnovy-data-science/lstm-nejronnaja-set/} (дата обращения: 11.12.2022)"
+}
+
+@misc{doublelstm,
+	title="Двунаправленный LSTM [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://machinelearningmastery.ru/develop-bidirectional-lstm-sequence-classification-python-keras/} (дата обращения: 11.12.2022)"
+}
+
+@misc{uavneutralize,
+	title="A Comprehensive Review of Unmanned Aerial Vehicle Attacks and Neutralization Techniques [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://www.sciencedirect.com/science/article/pii/S1570870520306788?via%3Dihub} (дата обращения: 13.12.2022)"
+}
+
+@misc{intellectnoise,
+	title="System and method for adaptive intelligent noise suppression [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://www.researchgate.net/publication/302798507_System_and_method_for_adaptive_intelligent_noise_suppression} (дата обращения: 13.12.2022)"
+}
+
+@misc{advanddisadvuwb,
+	title="Advantages of UWB | Disadvantages of UWB [Электронный ресурс]",
+	howpublished="Режим доступа: \url{https://www.rfwireless-world.com/Terminology/Advantages-and-disadvantages-of-UWB.html} (дата обращения: 13.12.2022)"
 }
