--- a/report/report.tex
+++ b/report/report.tex
@@ -4,7 +4,10 @@
 
 \begin{document}
 
-\include{00-title}
+%\include{00-title}
+\includepdf[pages=-]{titulnik.pdf}
+\include{001-referat}
+\include{002-definisions}
 \include{01-contents}
 \include{02-intro}
 
@@ -12,5 +15,7 @@
 
 \include{50-conclusion}
 \include{51-biblio}
+
+\include{511-priloja}
 
 \end{document}
