--- a/report/02-intro.tex
+++ b/report/02-intro.tex
@@ -1,16 +1,18 @@
 \chapter*{Введение}
 \addcontentsline{toc}{chapter}{Введение}
 
-Беспилотные летательные аппараты (БПЛА) могут использоваться для различных видов незаконной деятельности (например, промышленный шпионаж, контрабанда, терроризм). Учитывая их растущую популярность и доступность, а также достижения в области коммуникационных технологий, необходимо искать способы вывести из строя эти транспортные средства. Для вывода из строя дронов используются различные способы формирования помехи, но более продвинутые методы, такие как обман и захват БПЛА, реализовать значительно сложнее, и в этой области существует большой пробел в исследованиях. В настоящее время популярны методы машинного и глубокого обучения, которые также используются в различных приложениях, связанных с дронами. Это обучение может помочь БПЛА переключаться на другую частоту при обнаружении факта формирования помехи. Однако если передаваемый на нужной частоту шум будет похож на осмысленный сигнал, будет возможность <<обмануть>> БПЛА и таким образом не дать аппарату переключиться на другую частоту.
+В данной работе будет рассмотрена проблема классификации и генерации сигналов дистанционно-управляемых аппаратов.
 
-\textbf{Цель данной научно-исследовательской работы} --- провести обзор методов генерации с помощью нейронных сетей шумов и помех, напоминающих управляющие сигналы.
+Способность классифицировать и генерировать сигналы дистанционно-управляемых аппаратов относится к важнейшим функциональным возможностям систем подавления и захвата беспилотных аппаратов в настоящее время.
+
+\textbf{Цель данной научно-исследовательской работы} --- провести обзор методов классификации и генерации шумов и помех с помощью нейронных сетей.
 
 
 Для достижения поставленной цели необходимо решить следующие задачи:
 \begin{itemize}
-	\item[-] классифицировать основные типы сигналов и модуляций БПЛА;
+	\item[-] классифицировать основные типы сигналов и модуляций;
 	\item[-] изучить основные методы формирования помехи;
 	\item[-] определить базовое описание и разделение машинного обучения и глубокого обучения;
 	\item[-] представить различные типы нейронных сетей;
-	\item[-] сравнить представленные нейронные сети в рамках генерации шума для формирования помехи.
+	\item[-] сравнить представленные нейронные сети в рамках классификации генерации шума для формирования помехи.
 \end{itemize}
