--- a/report/51-biblio.tex
+++ b/report/51-biblio.tex
@@ -1,3 +1,5 @@
-\addcontentsline{toc}{chapter}{Литература}
+
+\addcontentsline{toc}{chapter}{Список использованных источников}
+\renewcommand\bibname{Список использованных источников}
 \bibliographystyle{utf8gost705u}  % стилевой файл для оформления по ГОСТу
 \bibliography{51-biblio}          % имя библиографической базы (bib-файла)
