--- a/report/preamble.inc.tex
+++ b/report/preamble.inc.tex
@@ -4,7 +4,7 @@
 \usepackage[english,russian]{babel} % Языки: русский, английский
 %\usepackage{pscyr} % Нормальные шрифты
 \usepackage{enumitem}
-
+\usepackage{pdfpages}
 \usepackage[14pt]{extsizes}
 
 \usepackage{caption}
@@ -18,6 +18,8 @@
 \geometry{right=15mm}
 \geometry{top=20mm}
 \geometry{bottom=20mm}
+
+\setlength{\parindent}{1.25cm} % для шрифта 14pt
 
 \usepackage{titlesec}
 \titleformat{\section}
@@ -85,6 +87,10 @@
 
 \usepackage{csvsimple}
 
-
+\addto\captionsrussian{\def\refname{Список используемых источников}}
 
 \newcommand{\code}[1]{\texttt{#1}}
+
+\makeatletter
+\renewcommand{\@biblabel}[1]{#1. \hfill}
+\makeatother
